--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=V&F
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Vu8Ua/PjiVrNP0DAzJKgEjF9w0qKbaJ6kEpZM9Fg0GY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -54,7 +54,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="${V&F}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -62,4 +62,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="${V&F}"
+
+RECAPTCHA_SITE_KEY=6Ld2Y2wsAAAAAMUTZ8AW2B3ipz0WmOKq0uJdQrGG
+RECAPTCHA_SECRET_KEY=6Ld2Y2wsAAAAAEEozE7YXLsnHmv6B1gszpvSlQbS
