--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "type": "module",
     "engines": {
-        "node": "20.x",
+        "node": "20.11.0",
         "npm": "10.x"
     },
     "scripts": {
