--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -22,9 +22,19 @@ services:
   - key: APP_URL
     value: https://vnf-app-93blz.ondigitalocean.app
   - key: DB_CONNECTION
-    value: pgsql
-  - key: DATABASE_URL
-    value: "${dev-db-751593.DATABASE_URL}"
+    value: mysql
+  - key: DB_HOST
+    value: "db-mysql-sgp1-27082-do-user-28294724-0.g.db.ondigitalocean.com"
+  - key: DB_PORT
+    value: "25060"
+  - key: DB_DATABASE
+    value: defaultdb
+  - key: DB_USERNAME
+    value: doadmin
+  - key: DB_PASSWORD
+    value: "REPLACE_WITH_PASSWORD"
+  - key: MYSQL_ATTR_SSL_CA
+    value: "/etc/ssl/certs/ca-certificates.crt"
   - key: SESSION_DRIVER
     value: database
   - key: QUEUE_CONNECTION
