--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -33,8 +33,8 @@ services:
     value: doadmin
   - key: DB_PASSWORD
     value: "REPLACE_WITH_PASSWORD"
-  - key: MYSQL_ATTR_SSL_CA
-    value: "/etc/ssl/certs/ca-certificates.crt"
+  - key: DB_SSL_MODE
+    value: preferred
   - key: SESSION_DRIVER
     value: database
   - key: QUEUE_CONNECTION
