--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -20,7 +20,7 @@ services:
   - key: APP_DEBUG
     value: "false"
   - key: APP_URL
-    value: https://vnf-app-93blz.ondigitalocean.app
+    value: https://vnfstotomas.app
   - key: DB_CONNECTION
     value: mysql
   - key: DB_HOST
