--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,7 +5,7 @@ services:
   github:
     branch: main
     deploy_on_push: true
-  build_command: composer install --no-dev --optimize-autoloader && php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan migrate --force && php artisan db:seed --class=UserSeeder --force
+  build_command: composer install --no-dev --optimize-autoloader && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan db:seed --class=UserSeeder --force
   run_command: heroku-php-apache2 public/
   http_port: 8080
   instance_size_slug: basic-xxs
@@ -20,8 +20,6 @@ services:
   - key: APP_DEBUG
     value: "false"
   - key: APP_URL
-    value: https://vnfstotomas.app
-  - key: ASSET_URL
     value: https://vnf-app-93blz.ondigitalocean.app
   - key: DB_CONNECTION
     value: mysql
