--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,7 +5,7 @@ services:
   github:
     branch: main
     deploy_on_push: true
-  build_command: composer install --no-dev --optimize-autoloader && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan db:seed --class=UserSeeder --force
+  build_command: npm install && npm run build && composer install --no-dev --optimize-autoloader && php artisan config:cache && php artisan route:cache && php artisan migrate --force && php artisan db:seed --class=UserSeeder --force
   run_command: heroku-php-apache2 public/
   http_port: 8080
   instance_size_slug: basic-xxs
